fix some spacing and newline issues

--- a/macpepdb_web_frontend/assets/sass/_helpers.sass
+++ b/macpepdb_web_frontend/assets/sass/_helpers.sass
@@ -32,3 +32,6 @@
 
 .bg-rub-grey
     background-color: $rub-grey !important
+
+.white-space-pre-line
+    white-space: pre-line
